infrastructure/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: argocd-server-tailscale
  namespace: argocd
spec: 
  rules:
    - host: argocd-server # becomes magicDNS hostname 
      http:
        paths:
          - path: /
           pathType: Prefix
           backend:
             service:
               name: argocd-server 
               port:
                 number: 80
    tls:
      - hosts:
        - argocd-server
